[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/ui/star_off.png" type="Texture" id=1]
[ext_resource path="res://game/recipe-book/RecipeDisplay.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ui/star_on.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/rm_almanack/rm_almanack.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/images/ui/book/recipe.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/book/arrow.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 4 )

[node name="RecipeDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
rect_min_size = Vector2( 307, 385 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -115.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 15
custom_constants/margin_bottom = 45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 15.0
margin_top = 30.0
margin_right = 287.0
margin_bottom = 340.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 272.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RECIPE NAME"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 272.0
margin_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0

[node name="Left" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = -1.0
margin_top = -1.0
margin_right = 122.0
margin_bottom = 199.0
rect_min_size = Vector2( 123, 200 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Left"]
margin_left = 61.0
margin_top = 100.0
margin_right = 61.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 148.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="Arrow" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Middle"]
margin_top = 75.0
margin_right = 25.0
margin_bottom = 125.0
texture = ExtResource( 6 )

[node name="Right" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 272.0
margin_bottom = 200.0
rect_min_size = Vector2( 124, 200 )

[node name="ReagentList" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Right"]
margin_left = 60.0
margin_top = 100.0
margin_right = 64.0
margin_bottom = 100.0

[node name="LeftColumn" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Right/ReagentList"]

[node name="RightColumn" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Right/ReagentList"]
margin_left = 4.0
margin_right = 4.0

[node name="Description" type="Label" parent="Panel/MarginContainer"]
margin_left = 15.0
margin_top = 315.0
margin_right = 287.0
margin_bottom = 340.0
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true

[node name="Button" type="Button" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FavoriteButton" type="TextureButton" parent="Panel"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="button_down" from="Panel/FavoriteButton" to="." method="_on_FavoriteButton_button_down"]
[connection signal="toggled" from="Panel/FavoriteButton" to="." method="_on_FavoriteButton_toggled"]
